@@ -44,5 +44,4 @@
         <module>testng-without-mock-framework</module>
         <module>without-test-and-mock-framework</module>
     </modules>
-
 </project>
